src/objects/Tour_Outcome__c.object
<CustomObject>
    <fields>
        <fullName>Tour_Scheduled_Notification_SMS_Roee__c</fullName>
        <formula>&quot;&amp;Id=&quot;+ Id + 
&quot;&amp;UserId=005F0000002YbvS&quot;+ 
&quot;&amp;From=+14156695919&quot;+ 
&quot;&amp;Type=SMS&amp;To=+16504756969&quot;+ 
&quot;&amp;Body=A new tour was scheduled at &quot;+ Location__r.Name +&quot; for &quot;+ TEXT(MONTH(Tour_Date__c )) + &quot;/&quot; + TEXT(DAY(Tour_Date__c)) + &quot;/&quot; + TEXT(YEAR(Tour_Date__c))+&quot;. &quot;+ TEXT(Tours_Booked_Today__c) + &quot; tours have been booked today.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Scheduled Notification SMS (Roee)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Scheduled_Notification_SMS__c</fullName>
        <formula>&quot;&amp;Id=&quot;+ Id + 
&quot;&amp;UserId=005F0000002YbvS&quot;+ 
&quot;&amp;From=+14156695919&quot;+ 
&quot;&amp;Type=SMS&amp;To=+13039189568&quot;+ 
&quot;&amp;Body=A new tour was scheduled at &quot;+  Location__r.Name  +&quot; for &quot;+ TEXT(MONTH(Tour_Date__c )) + &quot;/&quot; + TEXT(DAY(Tour_Date__c)) + &quot;/&quot; + TEXT(YEAR(Tour_Date__c))+&quot;. &quot;+  TEXT(Tours_Booked_Today__c) + &quot; tours have been booked today.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Scheduled Notification SMS (Leah)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Scheduled_With_Email__c</fullName>
        <label>Tour Scheduled With Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tour_With_First_Name__c</fullName>
        <formula>IF( NOT(ISBLANK(Tour_Participant__c)),  
  Tour_Participant__r.Salutation_Name__c,
  IF( NOT(ISBLANK(Lead__c)), 
    IF( ISBLANK(Lead__r.Salutation_Name__c),
      &quot;there&quot;, 
      Lead__r.Salutation_Name__c
    ), 
    IF(ISBLANK(Opportunity__r.Primary_Member__r.Salutation_Name__c), 
      &quot;there&quot;,
      Opportunity__r.Primary_Member__r.Salutation_Name__c
    ) 
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour With First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_With__c</fullName>
        <formula>IF( NOT(ISBLANK(Tour_Participant__c)),
  Tour_Participant__r.Salutation_Name__c,
  IF( NOT(ISBLANK(Lead__c)), 
    Lead__r.Salutation_Name__c, 
    Opportunity__r.Primary_Member__r.Salutation_Name__c  
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour With</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toured_By1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Toured By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tour_Outcome</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tours_Booked_Today__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tours Booked Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Tour_ID__c</fullName>
        <description>This field captures the information on the Tour, like who is the primary contact, tour date, and time. Also, this is used to identify that no duplicate tours are created for the same contact, building on same data and time.</description>
        <inlineHelpText>To avoid duplicate tour bookings, we capture this.</inlineHelpText>
        <label>Unique Tour ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Where_do_you_work_currently__c</fullName>
        <label>Where do you work currently</label>
        <picklist>
            <picklistValues>
                <fullName>Different coworking space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dedicated office space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing office space our company has elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment / home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee shops / libraries / public spaces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None, we’re starting a new venture / project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>account_uuid__c</fullName>
        <label>account_uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company_size__c</fullName>
        <formula>TEXT(Opportunity__r.Account.Company_Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_uuid__c</fullName>
        <label>contact_uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stage_name__c</fullName>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>stage name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <formula>Opportunity__r.utm_campaign__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>utm_campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_campaign_id__c</fullName>
        <formula>Opportunity__r.utm_campaign_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>utm_campaign_id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_content__c</fullName>
        <description>one of the utm_ parameters passed by websites and other external systems</description>
        <label>utm_content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <formula>Opportunity__r.utm_medium__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>utm_medium</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <formula>Opportunity__r.utm_source__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>utm_source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <description>one of the utm_ parameters passed by websites and other external systems</description>
        <label>utm_term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uuid__c</fullName>
        <label>uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tour Outcome</label>
    <listViews>
        <fullName>AMS_Metropool_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Status__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Metropool</value>
        </filters>
        <label>AMS-Metropool Last Week</label>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_Next_Week</fullName>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <columns>Tour_Date_Time__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Outcome_Notes__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Metropool</value>
        </filters>
        <label>AMS-Metropool Next Week</label>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_This_Week</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Metropool</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>AMS-Metropool This Week</label>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_Today</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Status__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Tour_Outcome__c</columns>
        <columns>Tour_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>startsWith</operation>
            <value>AMS-</value>
        </filters>
        <label>AMS- Wet + Met - Tomorrow</label>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_Today1</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Tour_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Metropool</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>AMS-Metropool Today</label>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_Tomorrow</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Metropool</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>AMS-Metropool Tomorrow</label>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_Tours_This_Month</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Metropool</value>
        </filters>
        <label>AMS - Metropool Tours This Month</label>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_Yesterday</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Metropool</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>AMS-Metropool Yesterday</label>
    </listViews>
    <listViews>
        <fullName>AMS_Wet_Met_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>startsWith</operation>
            <value>BL-</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>BL - HM + SC - This week</label>
    </listViews>
    <listViews>
        <fullName>AMS_Wet_Met_Next_Week</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>startsWith</operation>
            <value>AMS-</value>
        </filters>
        <label>AMS- Wet + Met - Next Week</label>
    </listViews>
    <listViews>
        <fullName>AMS_Wet_Met_This_week</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>startsWith</operation>
            <value>AMS-</value>
        </filters>
        <label>AMS- Wet + Met - This week</label>
    </listViews>
    <listViews>
        <fullName>AMS_Wet_Met_Yesterday</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Tour_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>startsWith</operation>
            <value>AMS-</value>
        </filters>
        <label>AMS- Wet + Met - Yesterday</label>
    </listViews>
    <listViews>
        <fullName>AMS_Weteringschans_Tours_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Lead__c</columns>
        <columns>Status__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>Tour_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Weteringschans</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>AMS - Weteringschans Tours Last Week</label>
    </listViews>
    <listViews>
        <fullName>AMS_Weteringschans_Tours_Next_Week</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Lead__c</columns>
        <columns>Status__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Toured_By1__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>Tour_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Weteringschans</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <label>AMS - Weteringschans Tours Next Week</label>
    </listViews>
    <listViews>
        <fullName>AMS_Weteringschans_Tours_This_Week</fullName>
        <columns>Location__c</columns>
        <columns>Tour_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Tour_With__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Tour_Notes__c</columns>
        <columns>Status__c</columns>
        <columns>Tour_Outcome_Form__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>AMS-Weteringschans</value>
        </filters>
        <filters>
            <field>Tour_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>AMS-Weteringschans Tours This Week</label>
    </listViews>
    <nameField>
        <displayFormat>TRO-{0000}</displayFormat>
        <label>Tour Outcome ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tour Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Lead_or_Opportunity_need_to_be_associate</fullName>
        <active>false</active>
        <description>Either Lead or Opportunity have to associated</description>
        <errorConditionFormula>AND(ISBLANK(Opportunity__c),  ISBLANK(Lead__c))</errorConditionFormula>
        <errorMessage>You have to select either Lead or Opportunity in order to create a Tour</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_record_make_Entry_Type_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISNEW(),
ISBLANK(TEXT( Entry_Type__c ))
)</errorConditionFormula>
        <errorMessage>When creating manual tour Entry Type must be set to Manual</errorMessage>
    </validationRules>
</CustomObject>